@@ -1,68 +1,42 @@
 package net.minecraft.world.level.storage.loot;
 
-import com.google.common.collect.HashMultimap;
-import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Multimap;
 import java.util.Set;
-import java.util.function.Supplier;
-import javax.annotation.Nullable;
+import net.minecraft.util.ProblemReporter;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 
 public class ValidationContext {
-	private final Multimap<String, String> problems;
-	private final Supplier<String> context;
+	private final ProblemReporter reporter;
 	private final LootContextParamSet params;
 	private final LootDataResolver resolver;
 	private final Set<LootDataId<?>> visitedElements;
-	@Nullable
-	private String contextCache;
 
-	public ValidationContext(LootContextParamSet lootContextParamSet, LootDataResolver lootDataResolver) {
-		this(HashMultimap.create(), () -> "", lootContextParamSet, lootDataResolver, ImmutableSet.of());
+	public ValidationContext(ProblemReporter problemReporter, LootContextParamSet lootContextParamSet, LootDataResolver lootDataResolver) {
+		this(problemReporter, lootContextParamSet, lootDataResolver, Set.of());
 	}
 
-	public ValidationContext(
-		Multimap<String, String> multimap,
-		Supplier<String> supplier,
-		LootContextParamSet lootContextParamSet,
-		LootDataResolver lootDataResolver,
-		Set<LootDataId<?>> set
-	) {
-		this.problems = multimap;
-		this.context = supplier;
+	private ValidationContext(ProblemReporter problemReporter, LootContextParamSet lootContextParamSet, LootDataResolver lootDataResolver, Set<LootDataId<?>> set) {
+		this.reporter = problemReporter;
 		this.params = lootContextParamSet;
 		this.resolver = lootDataResolver;
 		this.visitedElements = set;
 	}
 
-	private String getContext() {
-		if (this.contextCache == null) {
-			this.contextCache = (String)this.context.get();
-		}
-
-		return this.contextCache;
-	}
-
-	public void reportProblem(String string) {
-		this.problems.put(this.getContext(), string);
-	}
-
 	public ValidationContext forChild(String string) {
-		return new ValidationContext(this.problems, () -> this.getContext() + string, this.params, this.resolver, this.visitedElements);
+		return new ValidationContext(this.reporter.forChild(string), this.params, this.resolver, this.visitedElements);
 	}
 
 	public ValidationContext enterElement(String string, LootDataId<?> lootDataId) {
 		ImmutableSet<LootDataId<?>> immutableSet = ImmutableSet.<LootDataId<?>>builder().addAll(this.visitedElements).add(lootDataId).build();
-		return new ValidationContext(this.problems, () -> this.getContext() + string, this.params, this.resolver, immutableSet);
+		return new ValidationContext(this.reporter.forChild(string), this.params, this.resolver, immutableSet);
 	}
 
 	public boolean hasVisitedElement(LootDataId<?> lootDataId) {
 		return this.visitedElements.contains(lootDataId);
 	}
 
-	public Multimap<String, String> getProblems() {
-		return ImmutableMultimap.copyOf(this.problems);
+	public void reportProblem(String string) {
+		this.reporter.report(string);
 	}
 
 	public void validateUser(LootContextUser lootContextUser) {
@@ -74,6 +48,6 @@ public class ValidationContext {
 	}
 
 	public ValidationContext setParams(LootContextParamSet lootContextParamSet) {
-		return new ValidationContext(this.problems, this.context, lootContextParamSet, this.resolver, this.visitedElements);
+		return new ValidationContext(this.reporter, lootContextParamSet, this.resolver, this.visitedElements);
 	}
 }
